# 2024_Portfolio

./: .gitignore  cicd.py  cop.txt
.github/workflows/: publish.yaml
api/: pyproject.toml
api/2024_Portfolio/src/: main.py
api/src/Portfolio/: main.py
client/: package-lock.json  package.json
client/src/: App.css  App.tsx
client/src/components/: Job.tsx  Scroll_Banner.tsx  post.tsx  project.tsx
client/src/styles/: Job.css  Scroll_Banner.css  post.css  project.css
client/src/types/: project.ts
projects/: test.html  vector_fields.html
