
[build-system]
requires = ["setuptools"]  # REQUIRED if [build-system] table is used

build-backend = "setuptools.build_meta"  # If not defined, then legacy behavior can happen.


[project]

name = "2024_Portfolio" 

version = "0.0.0" 
description = "A sample Python project"

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}